[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://scenes/report.gd" id="1_report"]

[sub_resource type="Gradient" id="Gradient_sky"]
colors = PackedColorArray(0.529, 0.808, 0.922, 1, 0.89, 0.949, 0.992, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sky"]
gradient = SubResource("Gradient_sky")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_title"]
bg_color = Color(1, 0.835, 0.31, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 8
shadow_offset = Vector2(2, 4)
content_margin_left = 24.0
content_margin_top = 16.0
content_margin_right = 24.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score_panel"]
bg_color = Color(0.31, 0.765, 0.969, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 32.0
content_margin_top = 24.0
content_margin_right = 32.0
content_margin_bottom = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pass_pill"]
bg_color = Color(0.4, 0.733, 0.416, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miss_pill"]
bg_color = Color(0.937, 0.325, 0.314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 4.0
content_margin_right = 12.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_white"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_gold"]
bg_color = Color(1, 0.835, 0.31, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.176, 0.204, 0.212, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5
content_margin_left = 20.0
content_margin_top = 16.0
content_margin_right = 20.0
content_margin_bottom = 16.0

[node name="Report" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_report")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_sky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_title")
text = "RESULT_TITLE"
auto_translate_mode = 1

[node name="ScorePanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_score_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScorePanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 56
text = "0 / 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2

[node name="PassLabel" type="Label" parent="VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_pass_pill")
text = "Pass: 0"

[node name="MissLabel" type="Label" parent="VBoxContainer/ScorePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_miss_pill")
text = "Miss: 0"

[node name="NewBestLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.835, 0.31, 1)
theme_override_font_sizes/font_size = 32
text = "NEW_BEST"
auto_translate_mode = 1
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HomeButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_hover_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_pressed_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_white")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_white")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_white")
text = "BTN_HOME"
auto_translate_mode = 1

[node name="RetryButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_hover_color = Color(0.176, 0.204, 0.212, 1)
theme_override_colors/font_pressed_color = Color(0.176, 0.204, 0.212, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_gold")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_gold")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_gold")
text = "BTN_RETRY"
auto_translate_mode = 1

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/HomeButton" to="." method="_on_home_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/RetryButton" to="." method="_on_retry_pressed"]
